tenzir/tests/node/secrets/resolution_failure.tql
// node: true
// error: true
// skip: Temporarily disabled because no secret store on mac CI build

from {}
assert_secret secret=secret("does-not-exist"), expected="nothing"
